# ChangeLog for x11-apps/xfsinfo
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.5 2005/12/04 22:03:54 joshuabaergen Exp $

*xfsinfo-0.99.2 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xfsinfo-0.99.2.ebuild:
  Bump for 7.0RC3.

*xfsinfo-0.99.1 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xfsinfo-0.99.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xfsinfo-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).

*xfsinfo-0.99.0 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xfsinfo-0.99.0.ebuild:
  Initial commit for modular X.
