@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xfsinfo
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.5 2005/12/04 22:03:54 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.6 2005/12/09 06:49:58 spyderous Exp $
+
+  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  -xfsinfo-0.99.0.ebuild, -xfsinfo-0.99.1.ebuild:
+  Pull old versions.
 
 *xfsinfo-0.99.2 (04 Dec 2005)
 
